# super_team

./: .env.example  .gitignore  README.md  Superteam_pdf.docx  app.py  article.ipynb  collect_data.ipynb  collect_data.py  constants.py  helpers.py  master_model.ipynb  master_model.py  model.ipynb  model.py  models.py  new_model.ipynb  players.ipynb  pyproject.toml  requirements.txt  salary_cap.ipynb  season.ipynb  simulation.ipynb  simulation.py  superteam.ipynb  team.ipynb  team.py  team_model.py  tournament.ipynb  tournament.py  trade_value.ipynb  ~$perteam_pdf.docx
.claude/: settings.local.json
data/: player_performance_data.csv
doc/: Superteam.docx  article.docx  ~$perteam.docx  ~$rticle.docx
models/: 10_player_model.json  13_player_model.json  1_player_model.json  5_player_model.json  8_player_model.json  relative_master_model_no_pts.json  training_report.json
notebooks/: simulation.ipynb
src/superteam/: __init__.py  app.py  collect_data.py  constants.py  helpers.py  logger.py  model.py  predict.py  simulation.py  train_models.py  update_data.py
tests/: conftest.py  test_helpers.py  test_models.py  test_simulation.py
